--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.21.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
