--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-popper-tooltip": "^4.4.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "react-tooltip": "^5.21.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.88.2",
