--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@popperjs/core": "^2.11.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-popper": "^2.3.0",
     "react-popper-tooltip": "^4.4.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
